numbers/css/numbers.css
#sdidform #sdid_npa {
    width: 2em;
    float: none;
}

#sdidform #sdid_nxx {
    width: 2em;
    float: none;
}

#sdiddiv {
    display: block;
    text-align: center;
}

.foundDID {
    text-align: center;
}

.needCreditAdj {
    height: 11px;
    margin: 2px 0 0 !important;
}

#foundDIDList {
    padding: 0 40px;
}

#addDIDForm {
    overflow: auto;
    max-width 20em;
    max-height: 15em;
    border: 1px solid #A6A6A6;
}

#addDIDForm .column:not(:last-child) {
    border-right: 1px solid #A6A6A6;
}

#addDIDForm .column {
    float: left;
    text-align: center;
    height: 25px;
    line-height: 25px;
}

#addDIDForm .column.first {
    width: 100px;
}

#addDIDForm .column.second {
    width: 70px;
}

#addDIDForm .row {
    height: 25px
}

#addDIDForm .row:not(:last-child) {
    border-bottom: 1px solid #A6A6A6;
}

#addDIDForm .row:nth-child(odd) {
    background-color: #eeeeee;
}

#addDIDForm .row:nth-child(even) {
    background-color: #dddddd;
}

#addDIDForm .row .select_number {
    margin-top: 5px;
}

